Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-75959

QCamera inverts red and blue channel when using MEDIASUBTYPE_RGB24

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.12.5, 5.13.1, 5.14.0 Alpha
    • 5.12.3
    • Multimedia
    • None
    • Windows 7 and QT creator up-to-date
    • Windows
    • 15abbc8c9e3acb5d9bee70fd8bec25242ec7abdd (qt/qtmultimedia/5.12)

    Description

      A connected webcam produces pictures/viewfinder with all blue areas as red and red areas as blue, green unaffected. The multimediawidget example "camera" can be used to reproduce this bug.

      This bug happens with

      Desktop Qt 5.12.3 MSVC2017 32bit

      while older compilers e.g.

      Desktop Qt 5.11.1 MSVC2015 32bit

      work fine.

      Tested with a webcam in CaptureMode(QCamera::CaptureStillImage), others were unavailable. Webcam model: Logitech c270 HD

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            valentyn.doroshchuk Valentyn Doroshchuk
            pheinrich Peer Heinrich
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes